[staticInEnum] No Java 11 available on Jenkins?... :-(